--- a/photo_voting_game.html
+++ b/photo_voting_game.html
@@ -33,12 +33,12 @@
     <script>
         // Your Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyDKwNuGjMALW37sckAJ33le_seRSaQln-g",
-            authDomain: "photo-voting-d2d0c.firebaseapp.com",
-            projectId: "photo-voting-d2d0c",
-            storageBucket: "photo-voting-d2d0c.appspot.com",
-            messagingSenderId: "157550421554",
-            appId: "1:157550421554:web:0f761ac413ca77476b7e2b"
+            apiKey:AIzaSyDKwNuGjMALW37sckAJ33le_seRSaQln-g
+            authDomain:photo-voting-d2d0c.firebaseapp.com
+            projectId: photo-voting-d2d0c
+            storageBucket: photo-voting-d2d0c.appspot.com
+            messagingSenderId: 157550421554
+            appId:1:157550421554:web:0f761ac413ca77476b7e2b
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
