--- a/photo_voting_game.html
+++ b/photo_voting_game.html
@@ -25,21 +25,18 @@
         <label for="username">Enter your name:</label>
         <input type="text" id="username" name="username" required>
         <button type="submit">Start Game</button>
-    </form>
-    <div id="game-container" class="container" style="display:none;">
-        <img id="photo1" class="photo" src="" alt="Photo 1">
-        <img id="photo2" class="photo" src="" alt="Photo 2">
-    </div>
+    
     <script>
         // Your Firebase configuration
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+        apiKey: "AIzaSyDKwNuGjMALW37sckAJ33le_seRSaQln-g",
+  authDomain: "photo-voting-d2d0c.firebaseapp.com",
+  projectId: "photo-voting-d2d0c",
+  storageBucket: "photo-voting-d2d0c.appspot.com",
+  messagingSenderId: "157550421554",
+  appId: "1:157550421554:web:0f761ac413ca77476b7e2b",
+  measurementId: "G-ZLMC6EGDP3"
+  };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
