--- a/photo_voting_game.html
+++ b/photo_voting_game.html
@@ -21,34 +21,34 @@
 </head>
 <body>
     <h1>Photo Voting Game</h1>
-    <div id="user-form">
-        <label for="username">Enter your name:</label>
-        <input type="text" id="username" name="username" required>
-        <button type="button" onclick="startGame()">Start Game</button>
-    </div>
+   <div id="user-form">
+    <label for="username">Enter your name:</label>
+    <input type="text" id="username" name="username" required>
+    <button type="button" onclick="startGame()">Start Game</button>
+</div>
+
     <div id="game-container" class="container" style="display:none;">
         <img id="photo1" class="photo" src="" alt="Photo 1">
         <img id="photo2" class="photo" src="" alt="Photo 2">
     </div>
-    <script>
-        // Your Firebase configuration
-       // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
+<script>
+    // Firebase configuration and initialization
+    const firebaseConfig = {
+        apiKey: "AIzaSyDKwNuGjMALW37sckAJ33le_seRSaQln-g",
+        authDomain: "photo-voting-d2d0c.firebaseapp.com",
+        projectId: "photo-voting-d2d0c",
+        storageBucket: "photo-voting-d2d0c.appspot.com",
+        messagingSenderId: "157550421554",
+        appId: "1:157550421554:web:0f761ac413ca77476b7e2b"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
 
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyDKwNuGjMALW37sckAJ33le_seRSaQln-g",
-  authDomain: "photo-voting-d2d0c.firebaseapp.com",
-  projectId: "photo-voting-d2d0c",
-  storageBucket: "photo-voting-d2d0c.appspot.com",
-  messagingSenderId: "157550421554",
-  appId: "1:157550421554:web:0f761ac413ca77476b7e2b",
-  measurementId: "G-ZLMC6EGDP3"
-};
+    // Rest of your game logic
+    // Ensure Firebase initialization is completed before interacting with Firestore
+</script>
 
 // Initialize Firebase
 const app = initializeApp(firebaseConfig);
